--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
       <section class="imag_desc">
-        <img src="landingpage/Mask Group 1.png" />
+        <img src="/landingpage/Mask Group 1.png" />
        <div class="header-paraa">
         <p>
           <span class="paraaaa">كل ما هو جميل</span><br> <span class="font-width-span">يبدأ من <span class="parra-span">لازورد</span></span> 
