add links button Relates #2

--- a/index.html
+++ b/index.html
@@ -13,34 +13,36 @@
   <body>
     <header class="header">
       <nav class="navbar">
-        <img src="/landingpage/Group 23.png" >
+        <img src="landingpage/Group 23.png" >
         <ul class="list">
-          <li>الرئيسية</li>
-          <li>من نحن</li>
-          <li>المتجر</li>
-          <li>تواصل معنا</li>
-          <span class="shop-now">تسوق الآن</span>
+          <a href="#main"><li>الرئيسية</li></a>
+         <a href="#howus"> <li>من نحن</li></a>
+          <a href="#sort"><li>المتجر</li></a>
+          <a href="#con"><li>تواصل معنا</li></a>
+          <a class="shop-now" href="sort/sort.html"> <span >  تسوق الآن</span></a>
         </ul>
       </nav>
     </header>
       <section class="imag_desc">
-        <img src="/landingpage/Mask Group 1.png" />
+        <div id="main"></div>
+        <img src="landingpage/Mask Group 1.png" />
        <div class="header-paraa">
         <p>
           <span class="paraaaa">كل ما هو جميل</span><br> <span class="font-width-span">يبدأ من <span class="parra-span">لازورد</span></span> 
         </p>
         <div class="spans">
-          <span class="shop">تسوق الآن</span>
+          <a class="shop" href="sort/sort.html"><span >تسوق الآن</span></a> 
          <span class="fuon">استكشف اكثر</span>
         </div>
       </div>
       </section>
-    
-    <main class="container">
 
-      <section class="aboutUs">
-        <img src="/landingpage/Mask Group 2.png" />
-        <div class="contin">
+      <main class="container">
+        
+        <div id="howus"></div> 
+        <section class="aboutUs">
+          <img src="landingpage/Mask Group 2.png" />
+          <div class="contin">
           <h2>من نحن</h2>
           <p> 
             لازورد.. موقع الكتروني عربي الهدف منه ترشيح أفضل منتجات موجودة في أمازون للعناية بالبشرة والشعر وغيرها من المنتجات التي تعتني بجمال المرأة.
@@ -51,10 +53,11 @@
         </div>
       </section>
       <section class="stor">
+        <div id="sort"></div>
         <h2>المتجر</h2>
         <div class="card-contia">
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -66,9 +69,10 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a>
+          </div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -80,9 +84,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
-              <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <img src="landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
                   <span class="span">كريم عناية البشرة</span>
                   <span class="pris">120<span class="dolar">$</span> </span>
@@ -94,11 +98,12 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <button>تعرف على المزيد</button></div>
-        </div>
-        <button><< المزيد</button>
+              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            </div>
+        <a class="button" href="sort/sort.html"><< المزيد</a>
       </section>
       <section class="conect">
+        <div id="con"></div>
         <div class="conectpla">
           <textarea name="" id="" cols="30" rows="10"></textarea>
           <button>أرسل</button>
@@ -108,16 +113,16 @@
             <hr>
           </div>
           <div class="icon">
-            <img src="/landingpage/Group 26.png" alt="">
-            <img src="/landingpage/Group 27.png" alt="">
-            <img src="/landingpage/Group 28.png" alt="">
-            <img src="/landingpage/Group 29.png" alt="">
+            <img src="landingpage/Group 26.png" alt="">
+            <img src="landingpage/Group 27.png" alt="">
+            <img src="landingpage/Group 28.png" alt="">
+            <img src="landingpage/Group 29.png" alt="">
           </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <img src="/landingpage/Group 23.png" alt="">
+      <img src="landingpage/Group 23.png" alt="">
       <div class="contin-fot">
         <div class="word">
           <h2>الصفحات</h2>
@@ -128,10 +133,10 @@
         <div class="media">
           <h2>تابعونا</h2>
           <div class="icon-fot">
-            <img src="/landingpage/Group 26.png" alt="">
-            <img src="/landingpage/Group 27.png" alt="">
-            <img src="/landingpage/Group 28.png" alt="">
-            <img src="/landingpage/Group 29.png" alt="">
+            <img src="landingpage/Group 26.png" alt="">
+            <img src="landingpage/Group 27.png" alt="">
+            <img src="landingpage/Group 28.png" alt="">
+            <img src="landingpage/Group 29.png" alt="">
           </div>
         </div>
       </div>
