--- a/product/productt.html
+++ b/product/productt.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header" >
         <nav class="navbar">
-          <img src="/landingpage/Group 23.png" >
+          <img src="../landingpage/Group 23.png" >
           <ul class="list">
             <li>الرئيسية</li>
             <li>من نحن</li>
@@ -27,11 +27,11 @@
       <main class="continer">
         <article class="product">
             <div class="image">
-                <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
                 <div class="smalimg">
-                    <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
-                    <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
-                    <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                    <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                    <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                    <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
                 </div>
             </div>
             <div class="describtio">
@@ -56,14 +56,14 @@
             
 
                 </p>
-                <button>تسوق الان <img src="/landingpage/Icon feather-shopping-bag.png" alt=""></button>
+                <button>تسوق الان <img src="../landingpage/Icon feather-shopping-bag.png" alt=""></button>
             </div>
         </article>
         <section class="stor">
             <h2>المتجر</h2>
             <div class="card-contia">
               <div class="card">
-                <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
                 <div class="pris-span">
                     <span class="span">كريم عناية البشرة</span>
                     <span class="pris">120<span class="dolar">$</span> </span>
@@ -75,23 +75,23 @@
                   <span class="fa fa-star unactive"></span>
                   <span class="fa fa-star unactive"></span>
                 </div>
-                <button>تعرف على المزيد</button></div>
-              <div class="card">
-                <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
-                <div class="pris-span">
-                    <span class="span">كريم عناية البشرة</span>
-                    <span class="pris">120<span class="dolar">$</span> </span>
-                </div>
-                <div class="rating">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star unactive"></span>
-                  <span class="fa fa-star unactive"></span>
-                </div>
-                <button>تعرف على المزيد</button></div>
+                <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
                 <div class="card">
-                  <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+                <div class="pris-span">
+                    <span class="span">كريم عناية البشرة</span>
+                    <span class="pris">120<span class="dolar">$</span> </span>
+                </div>
+                <div class="rating">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star unactive"></span>
+                  <span class="fa fa-star unactive"></span>
+                </div>
+                <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+                <div class="card">
+                  <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
                   <div class="pris-span">
                       <span class="span">كريم عناية البشرة</span>
                       <span class="pris">120<span class="dolar">$</span> </span>
@@ -103,14 +103,14 @@
                     <span class="fa fa-star unactive"></span>
                     <span class="fa fa-star unactive"></span>
                   </div>
-                  <button>تعرف على المزيد</button></div>
-            </div>
+                  <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+                </div>
             <button><< المزيد</button>
           </section>
           
       </main>
       <footer class="footer">
-        <img src="/landingpage/Group 23.png" alt="">
+        <img src="../landingpage/Group 23.png" alt="">
         <div class="contin-fot">
           <div class="word">
             <h2>الصفحات</h2>
@@ -121,10 +121,10 @@
           <div class="media">
             <h2>تابعونا</h2>
             <div class="icon-fot">
-              <img src="/landingpage/Group 26.png" alt="">
-              <img src="/landingpage/Group 27.png" alt="">
-              <img src="/landingpage/Group 28.png" alt="">
-              <img src="/landingpage/Group 29.png" alt="">
+              <img src="../landingpage/Group 26.png" alt="">
+              <img src="../landingpage/Group 27.png" alt="">
+              <img src="../landingpage/Group 28.png" alt="">
+              <img src="../landingpage/Group 29.png" alt="">
             </div>
           </div>
         </div>
