--- a/sort/sort.html
+++ b/sort/sort.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <nav class="navbar">
-      <img src="/landingpage/Group 23.png" >
+      <img src="../landingpage/Group 23.png" >
       <ul class="list">
         <li>الرئيسية</li>
         <li>من نحن</li>
@@ -26,7 +26,7 @@
       <main class="continer">
         <div class="card-contia">
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -38,9 +38,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
-              <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
                   <span class="span">كريم عناية البشرة</span>
                   <span class="pris">120<span class="dolar">$</span> </span>
@@ -52,9 +52,9 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <button>تعرف على المزيد</button></div>
-          <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+              <div class="card">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -66,9 +66,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
-              <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
                   <span class="span">كريم عناية البشرة</span>
                   <span class="pris">120<span class="dolar">$</span> </span>
@@ -80,11 +80,11 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <button>تعرف على المزيد</button></div>
-        </div>
+              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            </div>
         <div class="card-contia">
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -96,9 +96,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -110,9 +110,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -124,9 +124,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
-              <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
                   <span class="span">كريم عناية البشرة</span>
                   <span class="pris">120<span class="dolar">$</span> </span>
@@ -138,11 +138,11 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <button>تعرف على المزيد</button></div>
-        </div>
+              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            </div>
         <div class="card-contia">
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -154,9 +154,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -168,9 +168,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -182,9 +182,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
-              <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
                   <span class="span">كريم عناية البشرة</span>
                   <span class="pris">120<span class="dolar">$</span> </span>
@@ -196,11 +196,11 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <button>تعرف على المزيد</button></div>
-        </div>
+              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            </div>
         <div class="card-contia">
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -212,9 +212,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -226,9 +226,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
-            <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+            <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
                 <span class="span">كريم عناية البشرة</span>
                 <span class="pris">120<span class="dolar">$</span> </span>
@@ -240,9 +240,9 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <button>تعرف على المزيد</button></div>
+            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
-              <img src="/landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
+              <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
                   <span class="span">كريم عناية البشرة</span>
                   <span class="pris">120<span class="dolar">$</span> </span>
@@ -254,11 +254,11 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <button>تعرف على المزيد</button></div>
-        </div>
+              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            </div>
       </main>
       <footer class="footer">
-        <img src="/landingpage/Group 23.png" alt="">
+        <img src="../landingpage/Group 23.png" alt="">
         <div class="contin-fot">
           <div class="word">
             <h2>الصفحات</h2>
@@ -269,10 +269,10 @@
           <div class="media">
             <h2>تابعونا</h2>
             <div class="icon-fot">
-              <img src="/landingpage/Group 26.png" alt="">
-              <img src="/landingpage/Group 27.png" alt="">
-              <img src="/landingpage/Group 28.png" alt="">
-              <img src="/landingpage/Group 29.png" alt="">
+              <img src="../landingpage/Group 26.png" alt="">
+              <img src="../landingpage/Group 27.png" alt="">
+              <img src="../landingpage/Group 28.png" alt="">
+              <img src="../landingpage/Group 29.png" alt="">
             </div>
           </div>
         </div>
