--- a/sort/sort.html
+++ b/sort/sort.html
@@ -38,7 +38,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
               <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
@@ -52,7 +52,7 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+              <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
               <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -66,7 +66,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
               <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
@@ -80,7 +80,7 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+              <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             </div>
         <div class="card-contia">
           <div class="card">
@@ -96,7 +96,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -110,7 +110,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -124,7 +124,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
               <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
@@ -138,7 +138,7 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+              <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             </div>
         <div class="card-contia">
           <div class="card">
@@ -154,7 +154,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -168,7 +168,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -182,7 +182,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
               <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
@@ -196,7 +196,7 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+              <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             </div>
         <div class="card-contia">
           <div class="card">
@@ -212,7 +212,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -226,7 +226,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
           <div class="card">
             <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
             <div class="pris-span">
@@ -240,7 +240,7 @@
               <span class="fa fa-star unactive"></span>
               <span class="fa fa-star unactive"></span>
             </div>
-            <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+            <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             <div class="card">
               <img src="../landingpage/WhatsApp Image 2021-12-21 at 11.33.08 PM.jpeg" alt="">
               <div class="pris-span">
@@ -254,7 +254,7 @@
                 <span class="fa fa-star unactive"></span>
                 <span class="fa fa-star unactive"></span>
               </div>
-              <a class="button" href="product/productt.html">تعرف على المزيد</a></div>
+              <a class="button" href="../product/productt.html">تعرف على المزيد</a></div>
             </div>
       </main>
       <footer class="footer">
