do responsev to landing page Relates #3

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <span class="paraaaa">كل ما هو جميل</span><br> <span class="font-width-span">يبدأ من <span class="parra-span">لازورد</span></span> 
         </p>
         <div class="spans">
-          <a class="shop" href="sort/sort.html"><span >تسوق الآن</span></a> 
+          <a class="shop" href="sort/sort.html">تسوق الآن</a> 
          <span class="fuon">استكشف اكثر</span>
         </div>
       </div>
